complete task (create new product with media files images and videos) in one request