@@ -14,6 +14,7 @@ import java.util.Arrays;
 import java.util.List;
 
 //http://localhost:8080/api/products/add
+//Togashi Here
 @RestController
 @RequestMapping("api/products")
 public class ProductController {
@@ -24,20 +25,23 @@ public class ProductController {
     @PostMapping(value = "/add", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     public ResponseEntity<?> createProduct(
             @RequestPart("product") String productJson,
-            @RequestPart(value = "images", required = false) MultipartFile[] images) {
+            @RequestPart(value = "images", required = false) MultipartFile[] images,
+            @RequestPart(value = "videos", required = false) MultipartFile[] videos) {
         try {
-            System.out.println("Received product JSON: " + productJson);
-            System.out.println("Received images: " + (images != null ? images.length : "null"));
-
             ObjectMapper mapper = new ObjectMapper();
             Product product = mapper.readValue(productJson, Product.class);
 
-            if (images == null || images.length == 0) {
-                return ResponseEntity.badRequest().body("Error: No images provided");
+            if ((images == null || images.length == 0) && (videos == null || videos.length == 0)) {
+                return ResponseEntity.badRequest().body("Error: No images or videos provided");
             }
 
-            List<MultipartFile> imageList = Arrays.asList(images);
-            Product savedProduct = productService.createProductWithImages(product, imageList);
+            // Handle my images
+            List<MultipartFile> imageList = images != null ? Arrays.asList(images) : List.of();
+            // Handle my videos
+            List<MultipartFile> videoList = videos != null ? Arrays.asList(videos) : List.of();
+
+            // Process product with images and videos
+            Product savedProduct = productService.createProductWithMedia(product, imageList, videoList);
             return ResponseEntity.ok(savedProduct);
         } catch (JsonProcessingException e) {
             return ResponseEntity.badRequest().body("Error parsing product JSON: " + e.getMessage());
